--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <a class="mint-cell mt-bg-white mt-bColor-grey-lv5">
             <div class="mint-cell-wrapper mt-bColor-grey-lv5 mint-cell-no-bottom-line" style="padding-right: 20px;">
                 <div class="mint-cell-title" style="flex: 1 1 96px; min-width: 96px;"><span class="mint-cell-text mt-color-grey-lv3">车牌号</span></div>
-                <div class="mint-cell-value mt-color-grey-lv3" style="flex: 1 1 calc(100% - 116px); margin-right: 20px;"><div class="em-select-value mt-color-grey-lv3">海口160949</div></div>
+                <div class="mint-cell-value mt-color-grey-lv3" style="flex: 1 1 calc(100% - 116px); margin-right: 20px;"><div class="em-select-value mt-color-grey-lv3">160949</div></div>
                              </div>
                                 </a>
                             </div>
